<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLinLay2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/txt_title" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Content" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/txt_content" />

    <Button
        android:id="@+id/butOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveClick"
        android:text="@string/Ok" />

    <Button
        android:id="@+id/butCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelClick"
        android:text="@string/Cancel" />
</LinearLayout>